# qontos-sim

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/scripts/: check-repo-docs.sh
.github/workflows/: ci.yml  doc-check.yml  release.yml  verify-commit-identity.yml
docs/: digital-twin.md  index.md
src/qontos_sim/: __init__.py  local.py  noisy.py  normalize.py
src/qontos_tensor/: __init__.py  circuit_simulator.py  dmrg.py  mpo.py  mps.py  quantum_advantage.py  tensor_core.py
src/qontos_twin/: __init__.py  modular_simulator.py
tests/: circuit_fixtures.py  conftest.py  test_digital_twin.py  test_imports.py  test_local_simulator.py  test_noisy_simulator.py  test_package.py  test_schema_compat.py  test_tensor_network.py
