[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qontos-sim"
version = "0.1.0"
description = "Quantum simulators and modular digital twin for QONTOS"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [{name = "Ramesh Tamilselvan", email = "rameshtamilselvan@gmail.com"}]
keywords = ["quantum", "simulator", "digital-twin", "tensor-network", "qiskit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.24",
    "pydantic>=2.0",
    "qontos @ git+https://github.com/qontos/qontos.git@main",
]

[project.optional-dependencies]
sim = ["qiskit>=1.0", "qiskit-aer>=0.13"]
twin = []  # pure Python, no extra deps
tensor = []  # pure numpy, no extra deps
all = ["qontos-sim[sim,twin,tensor]"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.8",
    "ruff>=0.4",
    "build>=1.0",
    "qiskit>=1.0",
    "qiskit-aer>=0.13",
]

[project.urls]
Homepage = "https://github.com/qontos/qontos-sim"
Repository = "https://github.com/qontos/qontos-sim"
Issues = "https://github.com/qontos/qontos-sim/issues"
Documentation = "https://github.com/qontos/qontos-sim/tree/main/docs"
Changelog = "https://github.com/qontos/qontos-sim/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
